fix(theme): fixed next-theme dark mode and rm custom dark mode code
body color was set to a fixed color in global style, removed it and use variables instead

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-/* Disable this to allow next-themes handle theme changes*/
-/* @media (prefers-color-scheme: dark) { */
-/*   :root { */
-/*     --background: #0a0a0a; */
-/*     --foreground: #ededed; */
-/*   } */
-/* } */
-
 body {
   color: var(--foreground);
   background: var(--background);
@@ -93,7 +80,7 @@ body {
   }
 
   body {
-    @apply bg-background text-foreground h-screen overflow-hidden unselectable;
+    @apply bg-background text-foreground h-screen overflow-hidden antialiased unselectable;
     scrollbar-color: var(--ring) var(--background);
   }
 }
